--- a/src/app.html
+++ b/src/app.html
@@ -8,5 +8,6 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "2975f4d7980849149d2176bbc3f6f26d"}'></script><!-- End Cloudflare Web Analytics -->
 	</body>
 </html>
